Fix adjusting shifts logic

--- a/schedule-helper/src/App.css
+++ b/schedule-helper/src/App.css
@@ -143,3 +143,7 @@ th,
 td {
 	border: 1px solid wheat;
 }
+
+td.optional {
+	color: #c27;
+}
